# transTags

./: .gitignore  LICENSE  README.md  README_CN.md
.github/workflows/: release.yml
docs/: FILE_STRUCTURE.md  GITHUB_UPLOAD.md
transTags_linux/: README_LINUX.md
transTags_linux/legacy/gnome-extension/: extension.js  install_gnome_extension.sh  metadata.json
transTags_linux/legacy/gnome-extension/schemas/: org.gnome.shell.extensions.transtags.gschema.xml
transTags_linux/legacy/x11-c/: Makefile  install_deps_ubuntu.sh  run.sh  transTags_linux.c
transTags_linux/qt/: CMakeLists.txt  README.md  install_desktop_entry.sh  install_qt_deps_ubuntu.sh  main.cpp  run.sh
transTags_windows/release/: config.ini
transTags_windows/source/: transTags_windows.sln
transTags_windows/source/transTags_windows/: config.ini  resource.h  transTags_windows.cpp  transTags_windows.rc  transTags_windows.vcxproj  transTags_windows.vcxproj.filters
transTags_windows/source/transTags_windows/sqlite/: README.md
